force-app/main/default/objects/Admin_Configuration__mdt/Admin_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Org-wide admin guardrails read at runtime by the service layer: login audit, alerts and retention limits.</description>
    <label>Admin Configuration</label>
    <pluralLabel>Admin Configurations</pluralLabel>
</CustomObject>