force-app/main/default/objects/Admin_Configuration__mdt/fields/Alert_Email__c.field-meta.xml
<CustomField>
    <fullName>Alert_Email__c</fullName>
    <label>Alert Email</label>
    <length>80</length>
    <type>Email</type>
</CustomField>