force-app/main/default/objects/Admin_Configuration__mdt/fields/Auto_Close_Stale_Days__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Stale_Days__c</fullName>
    <label>Auto Close Stale Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>