force-app/main/default/objects/Admin_Configuration__mdt/fields/Default_Report_Folder__c.field-meta.xml
<CustomField>
    <fullName>Default_Report_Folder__c</fullName>
    <label>Default Report Folder</label>
    <length>60</length>
    <type>Text</type>
</CustomField>