force-app/main/default/objects/Admin_Configuration__mdt/fields/Enable_Login_Audit__c.field-meta.xml
<CustomField>
    <fullName>Enable_Login_Audit__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Login Audit</label>
    <type>Checkbox</type>
</CustomField>