force-app/main/default/objects/Admin_Configuration__mdt/fields/Max_Login_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Login_Attempts__c</fullName>
    <label>Max Login Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>